fix issue with nav covering content

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,8 +134,8 @@ main {
     flex-direction: column;
     justify-content: center;
     background-color: white;
-	margin: 1rem 0 1rem 12rem;
-	padding-right: 5.5rem;
+	/* margin: 1rem 0 1rem 12rem; */
+	/* padding-right: 5.5rem; */
 }
 
 .reviews {
@@ -162,11 +162,6 @@ main {
 	font-weight: bold;
 }
 
-.review-timestamp {
-	grid
-	grid-column-end: 3;
-}
-
 .main-content {
 	/* padding: 50px; */
 	width: 600px;
@@ -176,8 +171,8 @@ main {
 	justify-content: center;
 	background-color: white;
 	padding: 2rem;
-	margin: 1rem 0 1rem 12rem;
-	padding-right: 7.5em;
+	/* margin: 1rem 0 1rem 12rem; */
+	/* padding-right: 7.5em; */
 	/* position: fixed; */
 }
 
@@ -521,4 +516,8 @@ form.flex-column fieldset > legend {
 }
 .restaurant-detail > div:nth-of-type(2) * {
 	margin: .25rem 0;
+}
+
+div.nav-space {
+	width: 22rem;
 }
